@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Allow recursive xPDOObject::remove() beyond one level
 - Allow schema to define callbacks for field
 - Reject xPDOQuery conditions with SQL injection attempts
 - Resolve xPDO::parseBindings() error from /e modifier fix
